--- a/src/main/resources/templates/email/email-changed.html
+++ b/src/main/resources/templates/email/email-changed.html
@@ -89,7 +89,7 @@
 
     <div class="footer">
         <p>변경일시: <span
-                th:text="${#temporals.format(#temporals.createNow(), 'yyyy-MM-dd HH:mm')}">2024-01-15 10:30</span></p>
+                th:text="${#temporals.format(#temporals.createNow(), 'MM-dd HH:mm')}">2024-01-15 10:30</span></p>
         <p>보안상 문제가 있다고 생각되시면 즉시 비밀번호를 변경해 주세요.</p>
         <p>&copy; 2024 Board-Hole. All rights reserved.</p>
     </div>
