--- a/src/main/resources/templates/email/welcome.html
+++ b/src/main/resources/templates/email/welcome.html
@@ -93,7 +93,7 @@
     <div class="footer">
         <p>계정: <span th:text="${userEmail}">user@example.com</span></p>
         <p>가입일시: <span
-                th:text="${#temporals.format(#temporals.createNow(), 'yyyy-MM-dd HH:mm')}">2024-01-15 10:30</span></p>
+                th:text="${#temporals.format(#temporals.createNow(), 'MM-dd HH:mm')}">2024-01-15 10:30</span></p>
         <p>&copy; 2024 Board-Hole. All rights reserved.</p>
     </div>
 </div>
