--- a/src/main/resources/templates/fragments/popover.html
+++ b/src/main/resources/templates/fragments/popover.html
@@ -1,83 +1,18 @@
-<!DOCTYPE html>
-<html lang="ko" 
-      xmlns:th="http://www.thymeleaf.org" 
-      xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
-<body>
-<!-- 사용자 메뉴 Popover Fragment -->
-<div th:fragment="user-menu" sec:authorize="isAuthenticated()">
-    <!-- Popover 콘텐츠 -->
-    <div id="user-menu" popover="auto" class="user-popover">
-        <!-- 일반 사용자 메뉴 -->
-        <div sec:authorize="hasRole('USER')">
-            <a href="/mypage">
-                <svg width="16" height="16" fill="currentColor" viewBox="0 0 16 16" class="me-2">
-                    <path d="M8 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm2-3a2 2 0 1 1-4 0 2 2 0 0 1 4 0zm4 8c0 1-1 1-1 1H3s-1 0-1-1 1-4 6-4 6 3 6 4zm-1-.004c-.001-.246-.154-.986-.832-1.664C11.516 10.68 10.289 10 8 10c-2.29 0-3.516.68-4.168 1.332-.678.678-.83 1.418-.832 1.664h10z"/>
-                </svg>
-                마이페이지
-            </a>
-            <a href="/boards/write">
-                <svg width="16" height="16" fill="currentColor" viewBox="0 0 16 16" class="me-2">
-                    <path d="M14.5 3a.5.5 0 0 1 .5.5v9a.5.5 0 0 1-.5.5h-13a.5.5 0 0 1-.5-.5v-9a.5.5 0 0 1 .5-.5h13zm-13-1A1.5 1.5 0 0 0 0 3.5v9A1.5 1.5 0 0 0 1.5 14h13a1.5 1.5 0 0 0 1.5-1.5v-9A1.5 1.5 0 0 0 14.5 1h-13z"/>
-                    <path d="M3 5.5a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 0 1h-9a.5.5 0 0 1-.5-.5zM3 8a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 0 1h-9A.5.5 0 0 1 3 8zm0 2.5a.5.5 0 0 1 .5-.5h6a.5.5 0 0 1 0 1h-6a.5.5 0 0 1-.5-.5z"/>
-                </svg>
-                글쓰기
-            </a>
-        </div>
-        
-        <!-- 관리자 메뉴 -->
-        <div sec:authorize="hasRole('ADMIN')">
-            <a href="/admin">
-                <svg width="16" height="16" fill="currentColor" viewBox="0 0 16 16" class="me-2">
-                    <path d="M8 4.754a3.246 3.246 0 1 0 0 6.492 3.246 3.246 0 0 0 0-6.492zM5.754 8a2.246 2.246 0 1 1 4.492 0 2.246 2.246 0 0 1-4.492 0z"/>
-                    <path d="M9.796 1.343c-.527-1.79-3.065-1.79-3.592 0l-.094.319a.873.873 0 0 1-1.255.52l-.292-.16c-1.64-.892-3.433.902-2.54 2.541l.159.292a.873.873 0 0 1-.52 1.255l-.319.094c-1.79.527-1.79 3.065 0 3.592l.319.094a.873.873 0 0 1 .52 1.255l-.16.292c-.892 1.64.901 3.434 2.541 2.54l.292-.159a.873.873 0 0 1 1.255.52l.094.319c.527 1.79 3.065 1.79 3.592 0l.094-.319a.873.873 0 0 1 1.255-.52l.292.16c1.64.893 3.434-.902 2.54-2.541l-.159-.292a.873.873 0 0 1 .52-1.255l.319-.094c1.79-.527 1.79-3.065 0-3.592l-.319-.094a.873.873 0 0 1-.52-1.255l.16-.292c.893-1.64-.902-3.433-2.541-2.54l-.292.159a.873.873 0 0 1-1.255-.52l-.094-.319zm-2.633.283c.246-.835 1.428-.835 1.674 0l.094.319a1.873 1.873 0 0 0 2.693 1.115l.291-.16c.764-.415 1.6.42 1.184 1.185l-.159.292a1.873 1.873 0 0 0 1.116 2.692l.318.094c.835.246.835 1.428 0 1.674l-.319.094a1.873 1.873 0 0 0-1.115 2.693l.16.291c.415.764-.42 1.6-1.185 1.184l-.291-.159a1.873 1.873 0 0 0-2.693 1.116l-.094.318c-.246.835-1.428.835-1.674 0l-.094-.319a1.873 1.873 0 0 0-2.692-1.115l-.292.16c-.764.415-1.6-.42-1.184-1.185l.159-.291A1.873 1.873 0 0 0 1.945 8.93l-.319-.094c-.835-.246-.835-1.428 0-1.674l.319-.094A1.873 1.873 0 0 0 3.06 4.377l-.16-.292c-.415-.764.42-1.6 1.185-1.184l.292.159a1.873 1.873 0 0 0 2.692-1.115l.094-.319z"/>
-                </svg>
-                관리자 페이지
-            </a>
-            <a href="/users">
-                <svg width="16" height="16" fill="currentColor" viewBox="0 0 16 16" class="me-2">
-                    <path d="M15 14s1 0 1-1-1-4-5-4-5 3-5 4 1 1 1 1h8zm-7.978-1A.261.261 0 0 1 7 12.996c.001-.264.167-1.03.76-1.72C8.312 10.629 9.282 10 11 10c1.717 0 2.687.63 3.24 1.276.593.69.758 1.457.76 1.72l-.008.002a.274.274 0 0 1-.014.002H7.022z"/>
-                </svg>
-                사용자 관리
-            </a>
-        </div>
-        
-        <!-- 구분선 -->
-        <div class="divider"></div>
-        
-        <!-- 로그아웃 -->
-        <form th:action="@{/api/auth/logout(redirect='/login?logout')}" method="post">
-            <button type="submit">
-                <svg width="16" height="16" fill="currentColor" viewBox="0 0 16 16" class="me-2">
-                    <path fill-rule="evenodd" d="M10 12.5a.5.5 0 0 1-.5.5h-8a.5.5 0 0 1-.5-.5v-9a.5.5 0 0 1 .5-.5h8a.5.5 0 0 1 .5.5v2a.5.5 0 0 0 1 0v-2A1.5 1.5 0 0 0 9.5 2h-8A1.5 1.5 0 0 0 0 3.5v9A1.5 1.5 0 0 0 1.5 14h8a1.5 1.5 0 0 0 1.5-1.5v-2a.5.5 0 0 0-1 0v2z"/>
-                    <path fill-rule="evenodd" d="M15.854 8.354a.5.5 0 0 0 0-.708l-3-3a.5.5 0 0 0-.708.708L14.293 7.5H5.5a.5.5 0 0 0 0 1h8.793l-2.147 2.146a.5.5 0 0 0 .708.708l3-3z"/>
-                </svg>
-                로그아웃
-            </button>
-        </form>
+<th:block th:fragment="manage-menu">
+    <div id="manage-menu" popover="auto">
+        <a th:href="@{/boards/{id}/edit(id=${board.id})}">✏️ 수정</a>
+        <hr>
+        <button type="button" commandfor="delete-board-detail-[[${board.id}]]" 
+                command="show-modal"
+                style="all: unset; cursor: pointer; display: block; padding: 0.35rem 0; color: var(--pico-del-color);">
+            🗑️ 삭제
+        </button>
+        <div th:insert="~{fragments/modal :: delete-confirm(
+            modalId='delete-board-detail-' + ${board.id},
+            title='게시글 삭제',
+            message='정말로 이 게시글을 삭제하시겠습니까?',
+            deleteAction=@{/forms/boards/{id}/delete(id=${board.id})},
+            itemName=${board.title}
+        )}"></div>
     </div>
-</div>
-
-<!-- 관리 메뉴 Popover Fragment (게시글 상세 페이지용) -->
-<div th:fragment="manage-menu">
-    <div id="manage-menu" popover="auto" class="user-popover">
-        <a th:href="@{/boards/{id}/edit(id=${board.id})}">
-            <svg width="16" height="16" fill="currentColor" viewBox="0 0 16 16" class="me-2">
-                <path d="M12.146.146a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1 0 .708L14.5 5.207l-8 8A.5.5 0 0 1 6.5 13.5v-3a.5.5 0 0 1 .146-.354l8-8zM10 3L13 6l-8 8H3V12l8-8z"/>
-            </svg>
-            수정
-        </a>
-        <div class="divider"></div>
-        <form th:action="@{/forms/boards/{id}/delete(id=${board.id})}" method="post" 
-              onsubmit="return confirm('정말 삭제하시겠습니까?')">
-            <button type="submit" class="text-danger">
-                <svg width="16" height="16" fill="currentColor" viewBox="0 0 16 16" class="me-2">
-                    <path d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0V6z"/>
-                    <path fill-rule="evenodd" d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1v1zM4.118 4 4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4H4.118zM2.5 3V2h11v1h-11z"/>
-                </svg>
-                삭제
-            </button>
-        </form>
-    </div>
-</div>
-</body>
-</html>
+</th:block>
